@@ -1,9 +1,14 @@
 eglibc (2.13-14) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * Remove amd64 biarch includes from libc6-dev:i386.  Closes: #636115,
     #636116.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 31 Jul 2011 14:00:59 +0200
+  [ Samuel Thibault ]
+  * patches/hurd-i386/submitted-sysvshm.diff: Fix shm creation: do not create
+    file on first lookup.
+
+ -- Samuel Thibault <sthibault@debian.org>  Mon, 01 Aug 2011 22:36:14 +0200
 
 eglibc (2.13-13) unstable; urgency=low
 
